# lance-verifiers

./: pyproject.toml
configs/: endpoints.py
environments/frontend_replication/: Dockerfile  README.md  crawl_pages.py  frontend_replication.py  ocr_free_utils.py  pyproject.toml  run_brex_benchmark.py  scoring.py
landing pages/: brex.com.html  linear.app_ai.html  notion.so.html  stripe.com.html  vercel.com.html
linear_benchmark_outputs/sonnet/: turn_1.html  turn_2.html  turn_3.html  turn_4.html
